carvel/patches/auth-config/pinniped-supervisor/ingress.ytt.yaml
#@ load("@ytt:data", "data")

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pinniped-supervisor
  name: pinniped-supervisor
  namespace: pinniped-supervisor
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: pinniped-supervisor

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinniped-supervisor
  namespace: pinniped-supervisor
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    #@ if/end data.values.ingress_class:
    kubernetes.io/ingress.class: #@ data.values.ingress_class
    #@ if/end data.values.cert_manager.tls_acme:
    kubernetes.io/tls-acme: "true"
    #@ if/end data.values.cert_manager.cluster_issuer:
    certmanager.k8s.io/cluster-issuer: #@ data.values.cert_manager.cluster_issuer
    #@ if/end data.values.contour.tls_cert_namespace:
    projectcontour.io/tls-cert-namespace: #@ data.values.contour.tls_cert_namespace
spec:
  tls:
  - hosts:
    - #@ data.values.pinniped_host
    secretName: #@ data.values.pinniped_supervisor_tls_secret_name
  rules:
  - host: #@ data.values.pinniped_host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pinniped-supervisor
            port:
              number: 8080
